--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,8 @@ dependencies {
     // For example, add the dependencies for Firebase Authentication and Cloud Fire store
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
