--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,16 @@
         android:theme="@style/Theme.TastyFoods"
         tools:targetApi="31">
         <activity
+            android:name=".mvvm.viewmodels.login.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".mvvm.viewmodels.login.EnterOtpActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".mvvm.viewmodels.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
