--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-
+    implementation "com.mapbox.navigation:android:2.10.4"
     implementation 'com.mapbox.maps:android:10.12.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
