--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,14 +31,15 @@ android {
 }
 
 dependencies {
-    implementation "com.mapbox.navigation:android:2.10.4"
-    implementation 'com.mapbox.maps:android:10.12.2'
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.3.0'
     implementation 'com.google.firebase:firebase-firestore:24.5.0'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation "com.mapbox.navigation:android:2.10.4"
+    implementation 'com.mapbox.maps:android:10.12.2'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -61,4 +62,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //slider
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
