convert ListSearchItem to Food result

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,6 @@ dependencies {
     //slider
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    //bo cong vien anh
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
 }
